--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -3,17 +3,21 @@
 }
 
 .form-control label,
-.form-control input {
+.form-control input,
+.form-control textarea {
     display: block;
-    width: 100%
+    width: 100%;
+    margin-bottom: 0.25rem;
 }
 
-.form-control input {
+.form-control input,
+.form-control textarea {
     border: 1px solid rgba(22, 97, 22, 0.849);
     font: inherit;
     border-radius: 2px;
 }
 
-.form-control input:focus {
+.form-control input:focus,
+.form-control textarea:focus {
     outline-color: orange;
 }
