--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -6,6 +6,7 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
+        <p>Hope this works</p>
         <% if (prods.length > 0) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
