--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -8,7 +8,7 @@
             <main>
                 <% if (prods.length > 0) { %>
                     <div class="grid">
-                        <% for (let product of prods) {  console.log("product:", product)%>
+                        <% for (let product of prods) { %>
                             <article class="card product-item">
                                 <header class="card__header">
                                     <h1 class="product__title">
@@ -27,8 +27,9 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product/<%= product.id %>" class="btn">Edit</a>
+                                    <a href="/admin/edit-product/<%= product.id %>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
+                                        <input type="hidden" value="<%= product.id %>" name="productId">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
 
