--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -1,5 +1,7 @@
 <%- include('../includes/head.ejs') %>
     <link rel="stylesheet" href="/css/product.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
     </head>
 
     <body>
@@ -9,7 +11,7 @@
                 <% if (prods.length > 0) { %>
                     <div class="grid">
                         <% for (let product of prods) { %>
-                            <article class="card product-item">
+                            <article class="card text-white bg-primary mb-3" style="max-width: 20rem;">
                                 <header class="card__header">
                                     <h1 class="product__title">
                                         <%= product.title %>
